[package]
name = "sat-bench"
description = "A small utilities for SAT solver benchmarking"
version = "0.16.1"
authors = ["Narazaki Shuji <shujinarazaki@protonmail.com>"]
edition = "2024"
default-run = "sat-bench"
rust-version = "1.85"

[dependencies]
chrono ="^0.4"
clap = { version = "^4.5", features = ["derive"] }
futures = "^0.3"
matrix-sdk = { version = "^0.12", optional = true }
once_cell = "^1.21"
regex = "^1.11"
ruma = "^0.12"
tokio = { version = "^1.45", features = ["full"] }
url = "^2.5"

[features]
default = [ ]
matrix = [ "matrix-sdk" ]
